[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/splash/splash.gd" type="Script" id=1]

[node name="splash" type="Node2D"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="buttons" type="VBoxContainer" parent="CanvasLayer"]
margin_left = 100.0
margin_top = 108.0
margin_right = 202.0
margin_bottom = 152.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pal_tester_button" type="Button" parent="CanvasLayer/buttons"]
margin_right = 113.0
margin_bottom = 20.0
text = "PAL TESTER"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="image_tester_button" type="Button" parent="CanvasLayer/buttons"]
margin_top = 24.0
margin_right = 113.0
margin_bottom = 44.0
text = "IMAGE TESTER"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="font_tester_button" type="Button" parent="CanvasLayer/buttons"]
margin_top = 48.0
margin_right = 113.0
margin_bottom = 68.0
text = "FONT TESTER"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="map_tester_button" type="Button" parent="CanvasLayer/buttons"]
margin_top = 72.0
margin_right = 113.0
margin_bottom = 92.0
text = "MAP TESTER"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="strings_tester_button" type="Button" parent="CanvasLayer/buttons"]
margin_top = 96.0
margin_right = 113.0
margin_bottom = 116.0
text = "STRINGS TESTER"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="playgame" type="Button" parent="CanvasLayer"]
margin_left = 439.0
margin_top = 245.0
margin_right = 524.0
margin_bottom = 265.0
text = "PLAY GAME"
__meta__ = {
"_edit_use_anchors_": false
}
